Update to Java17.